# PersonalAssistantWeb

./: .env.example  LICENSE  README.md  pyproject.toml
personal_assistant/accounts/: forms.py  urls.py  views.py
personal_assistant/accounts/templates/accounts/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
personal_assistant/address_book/: admin.py  forms.py  models.py  urls.py  views.py
personal_assistant/address_book/migrations/: 0001_initial.py
personal_assistant/address_book/static/addressbook/: style.css
personal_assistant/file_storage/: apps.py  aws.py  forms.py  models.py  old_version_views.py  signals.py  urls.py  views.py
personal_assistant/file_storage/migrations/: 0001_initial.py  0002_remove_file_file_path_file_file.py  0003_file_user.py
personal_assistant/file_storage/templates/file_storage/: all_files.html  (+1 more)
personal_assistant/news/: cities_eng.json  create_cities.py  models.py  tasks.py  urls.py  views.py
personal_assistant/news/migrations/: 0001_initial.py
personal_assistant/notebook/: forms.py  models.py  notes.txt  urls.py  views.py
personal_assistant/notebook/migrations/: 0001_initial.py  0002_alter_tag_options_notebook_tags_and_more.py
personal_assistant/personal_assistant/: settings.py  urls.py  views.py
personal_assistant/personal_assistant/static/: style.css
personal_assistant/pomodoro/: models.py  urls.py  views.py
personal_assistant/pomodoro/migrations/: 0001_initial.py  0002_alter_pomodorosession_duration.py
(+21 files in other folders)
